# rerun

./: BACKPRESSURE_IMPLEMENTATION_PLAN.md  BENCHMARK_RESULTS.md  BLUEPRINT_GEN.md  CLAUDE-METRICS-PANEL.md  COMPILE_TIME_IMPROVEMENT_PLAN.md  Cargo.toml  FAST_BUILDS.md  FINAL_STATUS.md  FINDINGS_10924.md  FIX_PLAN_11701.md  GPT5-PERFORMANCE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  ISSUE_11432_ANALYSIS.md  MESSAGE_ORDERING_ANALYSIS.md  PARALLEL_INGESTION_PLAN.md  PHASE5_ADVANCED_OPTIMIZATIONS.md  Q2_DEPENDENCY_ANALYSIS.md  QUERY_CACHE_ANALYSIS.md  QUERY_CACHE_CODE_REFERENCE.md  QUERY_CACHE_EXECUTIVE_SUMMARY.txt  QUERY_CACHE_QUICK_REFERENCE.md  QUICK_WINS_IMPLEMENTED.md  TIMEINT_REFACTORING_PLAN.md  TIMEINT_REFACTORING_SUMMARY.md  benchmark-phase-isolation.sh  benchmark-rebuild-performance.sh  commit_6cdba43_explanation.md  flamegraph-comparison.patch  issue_10789_analysis.md  issue_11254_findings_and_plan.md  pixi.toml  rebuild-benchmark-results.md  rebuild-performance-optimization-plan.md
.cargo/: config.toml
.github/workflows/: track_compile_times.yml
crates/store/re_entity_db/: Cargo.toml
examples/python/: webviewer_memory_repro_11701.py
examples/rust/flamegraph_compare/: Cargo.toml  README.md
examples/rust/flamegraph_compare/src/: main.rs  parser.rs
notes/: CLAUDE-PER-FRAME.md  CLAUDE-PERFORMANCE-IMPL.md  CLAUDE-PERFORMANCE.md  OPTIMIZATION-PROGRESS.md  TIMELINE-INDEXING-ANALYSIS.md
rerun_py/src/: python_bridge.rs
scripts/: compare_flamegraphs.py
scripts/ci/: track_compile_times.py
(+61 files in other folders)
